[project]
name = "speech-cognitive-load"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.2.1",
    "ffmpeg-python>=0.2.0",
    "imageio-ffmpeg>=0.6.0",
    "librosa>=0.11.0",
    "openai>=2.29.0",
    "openai-whisper>=20250625",
    "python-dotenv>=1.2.2",
    "spacy>=3.8.11",
    "torch>=2.10.0",
    "whisperx>=3.7.2",
]
